fixed navbar alignment and menu items showing on page

--- a/Selu383.SP26.Web/src/components/Navbar.css
+++ b/Selu383.SP26.Web/src/components/Navbar.css
@@ -29,6 +29,10 @@ nav .login{
 nav ul {
     position: center;
     display: flex;
+    flex: 1;
+    justify-content: center;
+    gap: 20px;
+    margin: 0 auto;
 }
 
 nav ul li {
@@ -43,4 +47,13 @@ nav ul li a {
     padding: 0.5rem;
     margin: 0 0.5rem;
     border-radius: 0.5rem;
+}
+
+nav .right, .left {
+    flex: 1;
+    display: flex;
+}
+
+nav .right{
+    justify-content: flex-end;
 }
